# Pynomaly

./: ..\..\..\windows\system32\config\sam  .buckconfig  .buckconfig.remote  .buckroot  .coveragerc  .dockerignore  .domain-boundaries.yaml  .domain-rules.yaml  .editorconfig  .env.development  .env.example  .env.production  .env.production.example  .eslintrc.js  .gitignore  .markdownlint.json  .mutmut.toml  .percyrc.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pyno-org.yaml  .python-version-dev  .secrets.baseline  .stylelintrc.js  ALGORITHM_MAPPING_FIXES.md  ARCHITECTURAL_LAYERS_STANDARDS.md  ARCHITECTURE_CODE_QUALITY_ASSESSMENT.md  BUCK  BUCK2_MIGRATION_COMPLETE.md  C:\Windows\System32\config\sam  CHANGELOG.md  CIRCULAR_IMPORT_ISSUE.md  CI_CD_SETUP_COMPLETE.md  CLAUDE.md  COMPREHENSIVE_ARCHITECTURE_SUMMARY.md  CONTRIBUTING.md  CROSS_LINKING_IMPLEMENTATION_STRATEGY.md  DEPENDENCY_UPGRADE_SUMMARY.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEVELOPMENT_GUIDELINES.md  (+269 more)
.claude/: claude.settings.local.json  settings.local.json  todo_list.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: ARCHITECTURE_RULES.yml  DOMAIN_BOUNDARY_RULES.yml  PACKAGE_INDEPENDENCE_RULES.yml  PROJECT_RULES.md  REPOSITORY_RULES.md  WORKFLOW_CONSOLIDATION_SUMMARY.md  branch-protection.yml  branch_protection.json  container-tests.yaml  dependabot.yml  pull_request_template.md
.project-rules/: README.md  REPOSITORY_ORGANIZATION_RULES.md  isolation-config.yaml
.storybook/: addons.js  main.js  manager.js  preview.js  theme.js
.venv_testing/: pyvenv.cfg
.zap/: rules.tsv
alembic/: env.py
analytics/: ai_analytics_dashboard.json  optimization_recommendations.json  performance_models.json  quantum_ecosystem_report.json  trend_analysis.json
appropriate subdirectory/: test_all_environments.sh
baseline_outputs/: BASELINE_SUMMARY.md
business-integration/: integration-automation.py  rollout-strategy.md
config/: .coveragerc  .mutmut.toml  .stylelintrc.js  advanced_testing_config.json  container_images.json  container_images.yml  metrics.env  package.json  prometheus.yml  pytest-bdd.ini  pytest.ini  redis.conf  tdd_config.json  test_config.json  tox.ini
configs/: pyproject.monorepo.toml
demo/: Dockerfile.api  Dockerfile.demo  Dockerfile.generator  docker-compose.yml  requirements.txt
deployment_env/: pyvenv.cfg
dev-environment/: README.md  setup-dev-environment.sh  validate-dev-environment.py
docker/: Dockerfile.hardened  Dockerfile.testing  Dockerfile.ui-testing
docs/: .gitignore  API_QUICK_REFERENCE.md  Banking_Anomaly_Detection_Slides.html  COMPLETE_DOMAIN_BOUNDED_CONTEXTS_CATALOG.md  COMPREHENSIVE_PROJECT_ASSESSMENT_REPORT.md  CROSS_LINKING_IMPLEMENTATION_STRATEGY.md  DEPENDENCY_GUIDE.md  DEPENDENCY_RESOLUTION_SUMMARY.md  DEPLOYMENT_READINESS_CHECKLIST.md  DEVELOPER_ONBOARDING.md  DOCUMENTATION_CROSS_LINKING_ANALYSIS_REPORT.md  DOCUMENTATION_CROSS_LINKING_EXECUTIVE_SUMMARY.md  DOMAIN_CLEANUP_SUMMARY.md  DOMAIN_COMPLIANCE_PLAN.md  DOMAIN_REORGANIZATION_SUMMARY.md  Data_Quality_Anomaly_Detection_Guide.md  FILE_REDISTRIBUTION_SUMMARY.md  FINAL_AUTONOMOUS_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_TRANSFER.md  MIGRATION_SUMMARY.md  MULTI_PYTHON_VERSIONS.md  OPERATIONS_RUNBOOK.md  PACKAGE_ISOLATION_EXCEPTIONS.md  PACKAGE_ISOLATION_RULE.md  PDF_Generation_Instructions.md  PHASE2_EXECUTION_PLAN.md  PHASE2_INFRASTRUCTURE_TEST_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE_5_PROGRESS_REPORT.md  PLATFORM_EVOLUTION_SUMMARY.md  README.md  README_BUCK2_MONOREPO.md  REPLACEMENT_FOLDERS_ISSUE.md  REPORT_ORGANIZATION_STANDARDS.md  SCRIPT_TESTING_SUMMARY.md  SECURITY.md  STATIC_ANALYSIS_ARCHITECTURE.md  STATIC_ANALYSIS_CONFIGURATION.md  (+45 more)
docs-consolidated/: README.md
docs-portal/: mkdocs.yml  setup.py
environments/: README.md
examples/: README.md  USAGE_GUIDE.md  advanced_ensemble_detection.py  advanced_scheduler_example.py  algorithm_comparison.py  analyze_financial_fraud.py  analyze_network_intrusion.py  anomaly_ranking_filtering.py  automl_example.py  autonomous_detection_example.py  basic_usage.py  batch_processing_example.py  cli_compat_demo.py  (+33 more)
hatch_buck2_plugin/: pyproject.toml
scripts/best_practices_framework/: MANIFEST.in  README.md  __init__.py  cli.py  pyproject.toml  setup.py
scripts/best_practices_framework/configs/: default_rules.yml
scripts/best_practices_framework/core/: __init__.py  base_validator.py  validator_engine.py
scripts/best_practices_framework/examples/: basic_usage.py
scripts/best_practices_framework/integrations/github_actions/: best-practices-validation.yml
scripts/best_practices_framework/reporting/: __init__.py  formats.py  report_generator.py
scripts/best_practices_framework/validators/: __init__.py
scripts/best_practices_framework/validators/security/: __init__.py  secrets_validator.py
src/shared/test_utilities/: README.md  __init__.py  factories.py  fixtures.py  helpers.py  markers.py  pyproject.toml
templates/data-science-ml-template/: README.md  pyproject.toml
templates/data-science-ml-template/src/ml_project/: __about__.py
templates/data-science-ml-template/src/ml_project/domain/entities/: model.py
templates/htmx-tailwind-app/: Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
templates/htmx-tailwind-app/src/htmx_app/: __init__.py  main.py
templates/htmx-tailwind-app/src/htmx_app/api/: __init__.py  components.py  data.py  forms.py  pages.py
templates/htmx-tailwind-app/src/htmx_app/core/: config.py
templates/htmx-tailwind-app/src/htmx_app/static/css/: input.css
templates/htmx-tailwind-app/src/htmx_app/templates/components/: demo_section.html  form_error.html  form_success.html
templates/htmx-tailwind-app/src/htmx_app/templates/layouts/: base.html
templates/htmx-tailwind-app/src/htmx_app/templates/pages/: home.html
templates/monorepo/: README.md  pyproject.toml
templates/testing-template/: README.md  pyproject.toml
templates/testing-template/tests/: conftest.py
templates/typer-cli-app/: README.md  pyproject.toml
(+5733 files in other folders)
